--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<div class="container" style="padding: 50px 0 100px 0">
-  <router-outlet> </router-outlet>
-</div>
+<header>
+  <app-navbar></app-navbar>
+</header>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
