--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@ html,
 body {
   --honestly-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  --honestly-bg-color: white;
+  --honestly-bg-color: rgb(240, 240, 240);
   --honestly-color: black;
   --honestly-color-brand: #24b47e;
   --honestly-color-secondary: #666;
