--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,53 +1,72 @@
 .login-form {
-  width: 400px;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: start;
+  width: 400px;
+  height: 100%;
   margin: 0 auto;
+  gap: 1rem;
 }
+
 form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   width: 100%;
-}
-
-label {
-  display: block;
-  margin: 0.5rem 0;
-  color: var(--honestly-color-secondary);
-  font-size: 0.8rem;
-}
-
-input {
-  width: 100%;
-  border-radius: var(--honestly-border-radius);
-  border: var(--honestly-border);
-  padding: 0.5rem;
-  font-size: 1rem;
-  background-color: var(--honestly-bg-color);
-  color: var(--honestly-color);
-  margin-bottom: 1rem;
-}
-
-input[disabled] {
-  color: var(--honestly-color-secondary);
 }
 
 button {
-  color: var(--honestly-color);
-  border: var(--honestly-border);
-  background-color: var(--honestly-bg-color);
-  display: inline-block;
-  text-align: center;
-  border-radius: var(--honestly-border-radius);
+  width: max-content;
+  height: 2.25rem;
   padding: 0.5rem 1rem;
-  cursor: pointer;
-  text-align: center;
+
+  color: var(--honestly-color-light);
+  background-color: var(--honestly-color-brand);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: var(--honestly-border-radius);
+
   font-size: 0.9rem;
-  margin-right: 1rem;
+  font-weight: 500;
+
+  cursor: pointer;
+
+  &[disabled] {
+    background-color: var(--honestly-color-light);
+    color: var(--honestly-color-border);
+    border: var(--honestly-border);
+  }
 }
 
-button.primary {
-  background-color: var(--honestly-color-brand);
-  border: 1px solid var(--honestly-color-brand);
-  color: white;
+.tabs {
+  display: flex;
+  width: 100%;
+}
+
+.tab {
+  display: flex;
+  flex: auto;
+  align-items: center;
+  justify-content: center;
+
+  font-weight: 500;
+  cursor: pointer;
+  --tab-color: transparent;
+
+  > span {
+    padding: 0.5rem 1rem;
+    border-bottom: 2px solid var(--tab-color);
+    transition: border-color ease-in-out 200ms;
+  }
+
+  &:hover {
+    --tab-color: var(--honestly-color-border);
+  }
+
+  &.tab-selected {
+    --tab-color: var(--honestly-color-brand);
+  }
+}
+
+.error {
+  color: var(--honestly-color-error);
 }
